[gd_scene load_steps=15 format=2]

[ext_resource path="res://_Image/BackGround.png" type="Texture" id=1]
[ext_resource path="res://Stage/Main Scene.gd" type="Script" id=2]
[ext_resource path="res://Stage/SceneController.tscn" type="PackedScene" id=3]
[ext_resource path="res://_Image/Btn_GameStart.png" type="Texture" id=4]
[ext_resource path="res://_Image/Btn_Exit.png" type="Texture" id=5]
[ext_resource path="res://_Sound/cute/Stage3,5.mp3" type="AudioStream" id=6]
[ext_resource path="res://_Image/Title.png" type="Texture" id=7]
[ext_resource path="res://_Image/Option.png" type="Texture" id=8]
[ext_resource path="res://_Image/Btn_Back.png" type="Texture" id=9]
[ext_resource path="res://_Image/Volume.png" type="Texture" id=10]
[ext_resource path="res://_Image/Story_1.png" type="Texture" id=11]
[ext_resource path="res://_Image/Story_3.png" type="Texture" id=12]
[ext_resource path="res://_Image/Story_2.png" type="Texture" id=13]
[ext_resource path="res://_Image/Story_4.png" type="Texture" id=14]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SceneController" parent="." instance=ExtResource( 3 )]

[node name="BackgroundSound" type="AudioStreamPlayer" parent="SceneController"]
stream = ExtResource( 6 )

[node name="Main" type="Node2D" parent="."]

[node name="BG" type="Sprite" parent="Main"]
position = Vector2( 635.5, 361.5 )
scale = Vector2( 0.505194, 0.474651 )
texture = ExtResource( 1 )

[node name="Title" type="Sprite" parent="Main"]
position = Vector2( 657, 169 )
scale = Vector2( 0.505194, 0.474651 )
texture = ExtResource( 7 )

[node name="Start" type="TextureButton" parent="Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 514.0
margin_top = 362.0
margin_right = 1486.0
margin_bottom = 672.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option" type="TextureButton" parent="Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 532.0
margin_top = 470.0
margin_right = 1539.0
margin_bottom = 906.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 540.0
margin_top = 580.0
margin_right = 1302.0
margin_bottom = 886.0
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option" type="Node2D" parent="."]
visible = false

[node name="BG" type="Sprite" parent="Option"]
position = Vector2( 646.5, 358 )
scale = Vector2( 0.504425, 0.475285 )
texture = ExtResource( 1 )

[node name="Option" type="Sprite" parent="Option"]
position = Vector2( 642, 175 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 8 )

[node name="Volume" type="Sprite" parent="Option"]
position = Vector2( 656, 402 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 10 )

[node name="VolumeSize" type="HSlider" parent="Option"]
anchor_right = 1.0
margin_left = 524.0
margin_top = 426.0
margin_right = 796.0
margin_bottom = 570.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="TextureButton" parent="Option"]
margin_left = 1092.0
margin_top = 30.0
margin_right = 1825.0
margin_bottom = 341.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameStory_1" type="Node2D" parent="."]
visible = false

[node name="BG" type="Sprite" parent="GameStory_1"]
position = Vector2( 635.5, 361.5 )
scale = Vector2( 0.505194, 0.474651 )
texture = ExtResource( 1 )

[node name="Story" type="Sprite" parent="GameStory_1"]
position = Vector2( 1111, 535 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 11 )
offset = Vector2( -1510, -590 )

[node name="Next2" type="TextureButton" parent="GameStory_1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.0
margin_top = -85.0
margin_right = 901.0
margin_bottom = 225.0
rect_scale = Vector2( 1.5, 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameStory_2" type="Node2D" parent="."]
visible = false

[node name="BG" type="Sprite" parent="GameStory_2"]
position = Vector2( 635.5, 361.5 )
scale = Vector2( 0.505194, 0.474651 )
texture = ExtResource( 1 )

[node name="Story" type="Sprite" parent="GameStory_2"]
position = Vector2( 1104, 533 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 13 )
offset = Vector2( -1510, -590 )

[node name="Next" type="TextureButton" parent="GameStory_2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.0
margin_top = -85.0
margin_right = 901.0
margin_bottom = 225.0
rect_scale = Vector2( 1.5, 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameStory_3" type="Node2D" parent="."]
visible = false

[node name="BG" type="Sprite" parent="GameStory_3"]
position = Vector2( 635.5, 361.5 )
scale = Vector2( 0.505194, 0.474651 )
texture = ExtResource( 1 )

[node name="Story" type="Sprite" parent="GameStory_3"]
position = Vector2( 1110, 533 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 12 )
offset = Vector2( -1510, -590 )

[node name="Next" type="TextureButton" parent="GameStory_3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.0
margin_top = -85.0
margin_right = 901.0
margin_bottom = 225.0
rect_scale = Vector2( 1.5, 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameStory_4" type="Node2D" parent="."]
visible = false

[node name="BG" type="Sprite" parent="GameStory_4"]
position = Vector2( 635.5, 361.5 )
scale = Vector2( 0.505194, 0.474651 )
texture = ExtResource( 1 )

[node name="Story" type="Sprite" parent="GameStory_4"]
position = Vector2( 1101, 533 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 14 )
offset = Vector2( -1510, -590 )

[node name="Next" type="TextureButton" parent="GameStory_4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.0
margin_top = -85.0
margin_right = 901.0
margin_bottom = 225.0
rect_scale = Vector2( 1.5, 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Main/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Main/Option" to="." method="_on_Option_pressed"]
[connection signal="pressed" from="Main/Exit" to="SceneController" method="_exit"]
[connection signal="value_changed" from="Option/VolumeSize" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="Option/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="GameStory_1/Next2" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="GameStory_2/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="GameStory_3/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="GameStory_4/Next" to="SceneController" method="_load_scene" binds= [ "Select Stage" ]]
